ecmascript/parser/tests/test262-error-references/fail/96d7443d69f12eea.js.stderr
error: Expected ], got ,
 --> $DIR/tests/test262-parser/fail/96d7443d69f12eea.js:1:8
  |
1 | ({get[a,b]:0})
  |        ^

